--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   geolocator: ^14.0.0
   geocoding: ^3.0.0
   permission_handler: ^12.0.0+1
+  omni_datetime_picker: ^2.1.1
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
